# simple_db_demo

./: .gitignore  EDUCATION.md  GEMINI.md  Makefile  README.md  ROADMAP.md  Roadmap_For_Windows.md  commands.sql  compile_commands.json  meson.build  tasks.md
examples/: 01_create_and_insert.sql  02_update.sql  03_delete.sql
include/: btree.h  common.h  database.h  os_portability.h  pager.h  schema.h  statement.h  table.h
src/: btree.c  database.c  main.c  os_portability.c  pager.c  schema.c  statement.c  table.c
tests/: performance_test.py  unit_tests.c
tests/golden_tests/: 01_basic.sql  02_many_inserts.expected  02_many_inserts.sql  03_delete.expected  03_delete.sql  04_select_where.expected  04_select_where.sql  05_persistence_p1.sql  05_persistence_p2.expected  05_persistence_p2.sql  06_update.expected  06_update.sql  07_errors.expected  07_errors.sql  08_sanitization.expected  08_sanitization.sql  09_range_scans.expected  09_range_scans.sql  10_text_pk.expected  10_text_pk.sql  11_multi_table.expected  11_multi_table.sql  12_meta_commands.expected  12_meta_commands.sql  13_mode_box.actual  13_mode_box.expected  13_mode_box.sql  run_golden_tests.py  run_golden_tests.sh
